fixing navbar collapse + fixed top

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -125,17 +125,3 @@ ul, ol {
   background-color: #0d6efd;
   color: #fff;
 }
-
-.rounded-three {
-  border: 2px transparent;
-  border-radius: 15px;
-  background-color: #0d6efd;
-  text-decoration: none;
-  color: #fff;
-}
-
-.rounded-three:hover {
-  border: 2px solid #fff;
-  background-color: transparent;
-  color: #fff;
-}
